Remove Mock Block Dock CommonJS build output (#1162)
* stop building broken commonjs build

* add changeset file

* fix dock tsconfig

--- a/libs/mock-block-dock/tsconfig.build.json
+++ b/libs/mock-block-dock/tsconfig.build.json
@@ -1,8 +1,7 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
-    "module": "commonjs",
-    "outDir": "dist/cjs"
+    "outDir": "dist"
   },
   "include": ["src"]
 }
