Change default codegen `outputFolder` to `src/types/generated`

--- a/libs/block-template-custom-element/package.json
+++ b/libs/block-template-custom-element/package.json
@@ -65,7 +65,7 @@
     "name": "block-template-custom-element",
     "protocol": "0.3",
     "codegen": {
-      "outputFolder": "src/types",
+      "outputFolder": "src/types/generated",
       "targets": {
         "thing.ts": [
           {
