Introduce improved Type System codegen utility for blocks (#1158)
* Move `mustBeDefined` into `util` in graph

* Restructure graph `util.ts`

* Driveby expose `inheritsFrom` in `getReferencedIdsFromEntityType`

* Delete old `codegen` implementation

* Add codegen parameters

* Add codegen entrypoint

* Add Initialize stage

* Add Preprocessing Stage

* Add Compile stage

* Add Postprocessing stage

* Fix turbo dependency graph

* Expose codegen and update block-scripts

* Use new codegen in React block template

* Use new codegen in Custom element block template

* Add changesets

* [DROP] - Example local usage

* Revert "[DROP] - Example local usage"

This reverts commit 96889bf2eee5adbd9ad01766bdfbadd9ad29d795.

* Make processing step filenames consistent

* Add clarifying comment

* Clean-up type title transformation

* Try and trigger a `@blockprotocol/core` rebuild

* Revert "Try and trigger a `@blockprotocol/core` rebuild"

This reverts commit 2b4e8aa20e5c211a52f27d02c9d5f5bf40d82f97.

* Describe build artifacts in `turbo.json`

* Fix, and simplify `turbo.json` by defining `dist` as a global `build` output

* Reuse placeholder const

* Rename `targetRoot` to `outputFolder`

* Opt for Type ID instead of Versioned URL in most places

* Only allow one `blockEntity` within block's codegen parameters

* Add demonstration of multiple codegen blockEntity defs

* Revert "Add demonstration of multiple codegen blockEntity defs"

This reverts commit 7bd695aa341c291c91f3124e38119fba64b16f58.

* Use blockEntity type URL from codegen object in block-metadata

* Temporarily remove referral to URLs from banner comment

* Output affected files on stdout and use as input for formatting

* Clean outputDir from within codegen

* Remove outdated `block-schema.json` reference

* Rename `OutgoingLinksAndTargets` union to `OutgoingLinkAndTarget`

* Change default codegen `outputFolder` to `src/types/generated`

* Resolve path in `cleanOutputDir`

* Remove unnecessary TODO

* Replace 

--- a/libs/@blockprotocol/graph/package.json
+++ b/libs/@blockprotocol/graph/package.json
@@ -34,14 +34,9 @@
       "import": "./dist/es/main-temporal.js"
     },
     "./codegen": {
-      "types": "./dist/cjs/non-temporal/codegen.d.ts",
-      "require": "./dist/cjs/codegen-non-temporal.cjs",
-      "import": "./dist/es/codegen-non-temporal.js"
-    },
-    "./temporal/codegen": {
-      "types": "./dist/cjs/temporal/codegen.d.ts",
-      "require": "./dist/cjs/codegen-temporal.cjs",
-      "import": "./dist/es/codegen-temporal.js"
+      "types": "./dist/cjs/codegen.d.ts",
+      "require": "./dist/cjs/codegen.cjs",
+      "import": "./dist/es/codegen.js"
     },
     "./custom-element": {
       "types": "./dist/cjs/non-temporal/custom-element.d.ts",
@@ -95,10 +90,7 @@
         "./dist/cjs/temporal/main.d.ts"
       ],
       "codegen": [
-        "./dist/cjs/non-temporal/codegen.d.ts"
-      ],
-      "temporal/codegen": [
-        "./dist/cjs/temporal/codegen.d.ts"
+        "./dist/cjs/codegen.d.ts"
       ],
       "custom-element": [
         "./dist/cjs/non-temporal/custom-element.d.ts"
@@ -144,7 +136,8 @@
     "ajv-formats": "^2.1.1",
     "json-schema-to-typescript": "^11.0.2",
     "lit": "^2.4.1",
-    "node-fetch": "^3.3.0"
+    "node-fetch": "^3.3.0",
+    "typescript": "4.9.4"
   },
   "devDependencies": {
     "@local/eslint-config": "0.0.0-private",
@@ -154,8 +147,7 @@
     "@rollup/plugin-typescript": "9.0.2",
     "eslint": "8.33.0",
     "rimraf": "^3.0.2",
-    "rollup": "3.5.1",
-    "typescript": "4.9.4"
+    "rollup": "3.5.1"
   },
   "peerDependencies": {
     "react": "^18.0.0"
