--- a/libs/wordpress-plugin/package.json
+++ b/libs/wordpress-plugin/package.json
@@ -36,6 +36,8 @@
     "@rjsf/core": "5.0.1",
     "@rjsf/utils": "5.0.1",
     "@rjsf/validator-ajv8": "5.0.1",
+    "@sentry/integrations": "7.43.0",
+    "@sentry/react": "7.43.0",
     "@types/lodash.debounce": "4.0.7",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
