--- a/libs/wordpress-plugin/package.json
+++ b/libs/wordpress-plugin/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wordpress-plugin",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "private": true,
   "description": "Repository for developing the Block Protocol WordPress plugin",
   "homepage": "https://blockprotocol.org/wordpress",
@@ -54,6 +54,7 @@
     "buffer": "6.0.3",
     "lodash.debounce": "4.0.8",
     "patch-package": "6.5.1",
+    "react-toastify": "9.1.1",
     "sanitize-html": "2.10.0",
     "ts-loader": "9.4.1",
     "typescript": "4.8.4",
