--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "check-dependency-version-consistency": "3.0.3",
     "dotenv-flow": "3.2.0",
     "husky": "8.0.3",
+    "just-install": "^1.0.11",
     "knip": "^1.6.1",
     "lint-staged": "13.1.0",
     "lockfile-lint": "4.10.0",
