--- a/libs/@blockprotocol/design-system/tsconfig.json
+++ b/libs/@blockprotocol/design-system/tsconfig.json
@@ -1,7 +1,7 @@
 {
-    "extends": "@local/tsconfig/dom.json",
-    "compilerOptions": {
-        "outDir": "dist",
-    },
-    "include": ["src"]
+  "extends": "@local/tsconfig/dom.json",
+  "compilerOptions": {
+    "outDir": "dist"
+  },
+  "include": ["src"]
 }
