--- a/libs/block-template-custom-element/package.json
+++ b/libs/block-template-custom-element/package.json
@@ -43,8 +43,8 @@
     "eslint": "8.33.0",
     "mock-block-dock": "0.1.3",
     "prettier": "2.8.2",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "block-scripts": {
     "port": 63212
