--- a/apps/site/package.json
+++ b/apps/site/package.json
@@ -88,8 +88,8 @@
     "nprogress": "^0.2.0",
     "passport": "^0.6.0",
     "prismjs": "^1.27.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-gtm-module": "^2.0.11",
     "react-hook-form": "7.37.0",
     "react-html-parser": "^2.0.2",
