--- a/libs/@blockprotocol/design-system/package.json
+++ b/libs/@blockprotocol/design-system/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@blockprotocol/design-system",
   "version": "0.0.1",
-  "description": "Implementation of the Block Protocol Graph service specification for blocks and embedding applications",
+  "description": "Implementation of the Block Protocol Design System",
   "keywords": [
     "blockprotocol",
     "blocks",
