Make @blockprotocol/design-system private temporarily (#1214)
* make @blockprotocol/design-system private temporarily

* Update libs/@blockprotocol/design-system/package.json

Co-authored-by: Tim Diekmann <21277928+TimDiekmann@users.noreply.github.com>

---------

Co-authored-by: Tim Diekmann <21277928+TimDiekmann@users.noreply.github.com>

--- a/libs/@blockprotocol/design-system/package.json
+++ b/libs/@blockprotocol/design-system/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@blockprotocol/design-system",
   "version": "0.0.1",
+  "private": true,
   "description": "Implementation of the Block Protocol Design System",
   "keywords": [
     "blockprotocol",
