Update GitHub labeler
Removes deprecated label, renames `area: docs` to `area: copy` and updates matching rules around this

--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -2,17 +2,14 @@
   - "apps/site/**"
 
 "area: apps":
-  - "apps/**"
+  - ["apps/**", "!apps/site/src/_pages/**"]
+
+"area: copy":
+  - "apps/site/src/_pages/**"
 
 "area: dependencies":
   - "**/patches/**"
   - "**/yarn.lock"
-
-"area: docs":
-  - "apps/site/src/_pages/docs/**"
-
-"area: hub":
-  - "hub/**"
 
 "area: infra":
   - ".changeset/config.json"
