--- a/libs/block-template-html/package.json
+++ b/libs/block-template-html/package.json
@@ -18,7 +18,7 @@
     "url": "https://hash.ai"
   },
   "scripts": {
-    "build": "rimraf dist && cp -R src dist && cp block-metadata.json dist && cp -R public dist",
+    "build": "rimraf dist && cp -R src dist && cp block-metadata.json dist && cp example-graph.json dist && cp -R public dist",
     "dev": "yarn prepare && echo \"Serving at http://localhost:63212\" && http-server -p 63212 ./dev",
     "fix:eslint": "eslint --fix .",
     "format": "prettier --write --ignore-unknown .",
