--- a/apps/site/package.json
+++ b/apps/site/package.json
@@ -35,7 +35,8 @@
     "@fortawesome/free-brands-svg-icons": "^6.0.0",
     "@fortawesome/free-regular-svg-icons": "^6.0.0",
     "@fortawesome/free-solid-svg-icons": "^6.0.0",
-    "@hashintel/type-editor": "0.0.19",
+    "@hashintel/design-system": "0.0.6",
+    "@hashintel/type-editor": "0.0.21",
     "@istanbuljs/nyc-config-typescript": "1.0.2",
     "@local/internal-api-client": "0.0.0-private",
     "@mui/icons-material": "^5.10.3",
