--- a/libs/wordpress-plugin/package.json
+++ b/libs/wordpress-plugin/package.json
@@ -52,6 +52,7 @@
     "@wordpress/data": "8.5.0",
     "@wordpress/scripts": "25.5.0",
     "buffer": "6.0.3",
+    "json-schema-to-typescript": "12.0.0",
     "lodash.debounce": "4.0.8",
     "patch-package": "6.5.1",
     "react-toastify": "9.1.1",
