--- a/libs/wordpress-plugin/tsconfig.json
+++ b/libs/wordpress-plugin/tsconfig.json
@@ -3,5 +3,5 @@
   "compilerOptions": {
     "skipLibCheck": true
   },
-  "include": ["plugin/trunk/settings/**/*", "plugin/trunk/block/**/*", "plugin/trunk/block/window.d.ts"]
+  "include": ["./declarations.d.ts", "plugin/trunk/settings/**/*", "plugin/trunk/block/**/*", "plugin/trunk/block/window.d.ts"]
 }
