--- a/libs/@blockprotocol/design-system/package.json
+++ b/libs/@blockprotocol/design-system/package.json
@@ -33,8 +33,8 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "@babel/preset-env": "^7.20.2",
-    "@babel/preset-typescript": "^7.21.0",
+    "@babel/preset-env": "7.20.2",
+    "@babel/preset-typescript": "7.18.6",
     "@local/eslint-config": "0.0.0-private",
     "@local/tsconfig": "0.0.0-private",
     "@storybook/addon-essentials": "^7.0.0-beta.14",
@@ -44,6 +44,8 @@
     "@storybook/react": "^7.0.0-beta.14",
     "@storybook/react-webpack5": "^7.0.0-beta.14",
     "@storybook/testing-library": "^0.0.13",
+    "@types/react": "18.0.25",
+    "@types/react-dom": "18.0.9",
     "eslint-plugin-storybook": "0.6.11",
     "storybook": "^7.0.0-beta.14",
     "typescript": "4.9.4"
