--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -11,7 +11,7 @@ jobs:
   e2e_tests:
     name: E2E tests
     if: github.event.deployment_status.state == 'success' && endsWith(github.event.deployment_status.environment, 'blockprotocol')
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     timeout-minutes: 60
 
     steps:
