Update WordPress plugin to allow activation using email address (#1250)
* Hide most settings until api key is present

* Send request to link API and fix conditional rendering of settings

* Display API key when it's been set

* Display existing API key in disabled input

* Enable removing keys

* Fix redirect

* Only show public part of API key

* Make safer

* Add a todo

* Add script for rendering the promo

* Fix

* Lint

* Add colfax font

* Fix page structure

* Improve loading of styles

* Add styles

* Add fonts and icons

* Add copy

* Wrap text properly

* Text formatting

* Add coming soon

* Add an image

* WIP: more images

* Lazy load the promo

* Don't load styles twice

* Finish design

* Code cleanup

* Hide form and warning on BP activate page

* Cleanup

* Global CSS

* More styling

* Add error handling for email

* Tidy

* Nonces

* Remove curl

* Link to correct part of admin

* Fix

* Remove sanitize

* Fix updating settings post-activation

* Formatting

* Formatting

* Formatting

* Translations

* Quotes

* Deal with changes upstream

* Max width

* Style the inputs

* Style the API key input

* Style detach link as black

* Update copy

* Add activate banner

* Add post-activation banner

* capitalise wordpress as wordPress and Wordpress as WordPress

* Replace wordPress with wordpress

* lint

* Rename file

* PR changes

* prettier

--- a/libs/wordpress-plugin/tsconfig.json
+++ b/libs/wordpress-plugin/tsconfig.json
@@ -3,5 +3,10 @@
   "compilerOptions": {
     "skipLibCheck": true
   },
-  "include": ["plugin/trunk/block/**/*", "plugin/trunk/block/window.d.ts"]
+  "include": [
+    "./declarations.d.ts",
+    "plugin/trunk/settings/**/*",
+    "plugin/trunk/block/**/*",
+    "plugin/trunk/block/window.d.ts"
+  ]
 }
