--- a/libs/wordpress-plugin/package.json
+++ b/libs/wordpress-plugin/package.json
@@ -32,6 +32,8 @@
     "@blockprotocol/graph": "0.2.2",
     "@blockprotocol/hook": "0.1.3",
     "@blockprotocol/service": "0.1.3",
+    "@fortawesome/fontawesome-svg-core": "6.4.0",
+    "@fortawesome/free-solid-svg-icons": "6.4.0",
     "@lit-labs/react": "1.1.1",
     "@rjsf/core": "5.0.1",
     "@rjsf/utils": "5.0.1",
@@ -52,6 +54,7 @@
     "@wordpress/data": "8.5.0",
     "@wordpress/scripts": "25.5.0",
     "buffer": "6.0.3",
+    "clsx": "1.2.1",
     "lodash.debounce": "4.0.8",
     "patch-package": "6.5.1",
     "react-toastify": "9.1.1",
