--- a/infra/docker/esm-sh/Dockerfile
+++ b/infra/docker/esm-sh/Dockerfile
@@ -4,11 +4,14 @@ RUN apt-get update -y && apt-get install -y xz-utils
 RUN curl -fsSL https://deb.nodesource.com/setup_18.x | bash - &&\
     apt-get install -y nodejs
 
-RUN mkdir /esm
+RUN useradd -u 1000 -m esm
+RUN mkdir /esm && chown esm:esm /esm
 RUN git clone https://github.com/esm-dev/esm.sh /esm
 
 WORKDIR /esm
 RUN git checkout v115
+
+USER esm
 COPY config.json config.json
 RUN go build -o bin/esmd main.go
 
