--- a/libs/block-template-custom-element/package.json
+++ b/libs/block-template-custom-element/package.json
@@ -1,6 +1,6 @@
 {
   "name": "block-template-custom-element",
-  "version": "0.3.4-canary-20230413145831",
+  "version": "0.3.3",
   "description": "Block Protocol block template for a custom element-based block",
   "keywords": [
     "blockprotocol",
@@ -33,15 +33,15 @@
     "trailingComma": "all"
   },
   "dependencies": {
-    "@blockprotocol/graph": "0.2.3-canary-20230413145831",
+    "@blockprotocol/graph": "0.2.2",
     "lit": "^2.4.1"
   },
   "devDependencies": {
     "@local/eslint-config": "0.0.0-private",
     "@types/react-dom": "^18.0.9",
-    "block-scripts": "0.2.4-canary-20230413145831",
+    "block-scripts": "0.2.3",
     "eslint": "8.33.0",
-    "mock-block-dock": "0.1.5-canary-20230413145831",
+    "mock-block-dock": "0.1.4",
     "prettier": "2.8.2",
     "react": "18.2.0",
     "react-dom": "18.2.0"
