--- a/blocks/feature-showcase/package.json
+++ b/blocks/feature-showcase/package.json
@@ -41,7 +41,7 @@
   "devDependencies": {
     "@local/eslint-config": "0.0.0-private",
     "@local/tsconfig": "0.0.0-private",
-    "@types/react-dom": "^18.0.9",
+    "@types/react-dom": "18.0.9",
     "block-scripts": "0.2.3",
     "eslint": "8.33.0",
     "mock-block-dock": "0.1.4",
