--- a/libs/block-template-react/package.json
+++ b/libs/block-template-react/package.json
@@ -37,7 +37,8 @@
   },
   "devDependencies": {
     "@local/eslint-config": "0.0.0-private",
-    "@types/react-dom": "^18.0.9",
+    "@types/react-dom": "18.0.9",
+    "@types/react-is": "18.2.0",
     "block-scripts": "0.2.3",
     "eslint": "8.33.0",
     "mock-block-dock": "0.1.4",
