--- a/libs/@blockprotocol/action/package.json
+++ b/libs/@blockprotocol/action/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@blockprotocol/action",
-  "version": "0.0.1",
+  "version": "0.0.1-canary.2",
   "description": "Implementation of the Block Protocol Action module specification for blocks and embedding applications",
   "keywords": [
     "blockprotocol",
