--- a/.github/actions/warm-up-repo/action.yml
+++ b/.github/actions/warm-up-repo/action.yml
@@ -18,7 +18,7 @@ runs:
     - name: Install Rust tools
       uses: taiki-e/install-action@v2
       with:
-        tool: wasm-pack@0.11.0
+        tool: just@1.13.0,wasm-pack@0.11.0
 
     - name: Cache Rust dependencies
       uses: Swatinem/rust-cache@v2
