--- a/libs/block-scripts/package.json
+++ b/libs/block-scripts/package.json
@@ -28,6 +28,7 @@
     "@babel/core": "^7.21.0",
     "@babel/plugin-proposal-class-properties": "^7.18.6",
     "@babel/plugin-proposal-decorators": "^7.21.0",
+    "@babel/plugin-proposal-private-methods": "7.18.6",
     "@babel/plugin-transform-runtime": "^7.21.0",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
