[BP-8] Display RFCs on the Þ site alongside `spec` and `docs` (#1255)
* chore: Display RFCs on the Þ site alongside `spec` and `docs`

Co-authored-by: LuisChiej <54555805+LuisChiej@users.noreply.github.com>

* chore: apply approach maintaining roc source

Co-authored-by: LuisChiej <54555805+LuisChiej@users.noreply.github.com>

* chore: refactor rfcs mdx generation

Co-authored-by: LuisChiej <54555805+LuisChiej@users.noreply.github.com>

* fix: function name

Co-authored-by: LuisChiej <54555805+LuisChiej@users.noreply.github.com>

* chore: `Merge 'BP-OSS-1186' into BP-OSS-1185`

Co-authored-by: LuisChiej <54555805+LuisChiej@users.noreply.github.com>

* chore: Merge main into BP-OSS-1185

Co-authored-by: LuisChiej <54555805+LuisChiej@users.noreply.github.com>

* replace markdownlint-cli with markdownlint-cli2

* fix glob patterns

* move markdownlint.json file

* fix: markdownlint

Co-authored-by: LuisChiej <54555805+LuisChiej@users.noreply.github.com>

* revert graph type system list numbering changes

* remove unintended change

---------

Co-authored-by: LuisChiej <54555805+LuisChiej@users.noreply.github.com>
Co-authored-by: Ciaran Morinan <c@hash.ai>
Co-authored-by: Ciaran Morinan <37743469+CiaranMn@users.noreply.github.com>

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "fix": "npm-run-all --continue-on-error \"fix:*\"",
     "fix:dependency-version-consistency": "check-dependency-version-consistency --fix .",
     "fix:eslint": "turbo run --continue fix:eslint",
-    "fix:markdownlint": "markdownlint --dot --fix .",
+    "fix:markdownlint": "markdownlint-cli2 --fix '**/*.md' '#**/node_modules' '#**/vendor' '#**/dist' '#**/LICENSE-APACHE.md'",
     "fix:prettier": "prettier --cache --write --ignore-unknown .",
     "fix:yarn-deduplicate": "yarn install && yarn-deduplicate --strategy=fewer && yarn install",
     "lint": "npm-run-all --continue-on-error \"lint:*\"",
@@ -29,7 +29,7 @@
     "lint:eslint": "turbo run --continue lint:eslint",
     "lint:knip": "knip --no-exit-code",
     "lint:lockfile-lint": "lockfile-lint --path yarn.lock --allowed-hosts registry.yarnpkg.com --allowed-schemes \"https:\"",
-    "lint:markdownlint": "markdownlint --dot .",
+    "lint:markdownlint": "markdownlint-cli2 '**/*.md' '#**/node_modules' '#**/vendor' '#**/dist' '#**/LICENSE-APACHE.md'",
     "lint:prettier": "prettier --cache --check --ignore-unknown .",
     "lint:tsc": "turbo run --continue lint:tsc",
     "lint:yarn-deduplicate": "yarn-deduplicate --fail --list --strategy=fewer",
@@ -53,7 +53,7 @@
     "knip": "^1.6.1",
     "lint-staged": "13.1.0",
     "lockfile-lint": "4.10.0",
-    "markdownlint-cli": "0.33.0",
+    "markdownlint-cli2": "0.7.0",
     "npm-run-all": "4.1.5",
     "patch-package": "6.5.0",
     "prettier": "2.8.2",
