--- a/.github/workflows/labeler.yml
+++ b/.github/workflows/labeler.yml
@@ -7,9 +7,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: kachkaev/labeler@0776a679364a9a16110aac8d0f40f5e11009e327
-        ## @todo replace with actions/labeler@v4 (or newer) when this PR is merged:
-        ## https://github.com/actions/labeler/pull/316
+      - uses: actions/labeler@v4
         with:
           dot: true
           repo-token: "${{ secrets.GITHUB_TOKEN }}"
