--- a/libs/@blockprotocol/graph/package.json
+++ b/libs/@blockprotocol/graph/package.json
@@ -136,7 +136,7 @@
     "ajv-formats": "^2.1.1",
     "json-schema-to-typescript": "^11.0.2",
     "lit": "^2.4.1",
-    "node-fetch": "^3.3.0",
+    "node-fetch": "2.6.12",
     "typescript": "4.9.4"
   },
   "devDependencies": {
