--- a/libs/block-scripts/package.json
+++ b/libs/block-scripts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "block-scripts",
-  "version": "0.3.1",
+  "version": "0.3.2-canary-20230803130052",
   "description": "Block development framework",
   "keywords": [
     "blockprotocol",
@@ -35,7 +35,7 @@
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.21.0",
     "@babel/runtime": "^7.21.0",
-    "@blockprotocol/graph": "0.3.0",
+    "@blockprotocol/graph": "0.3.1-canary-20230803130052",
     "@blockprotocol/type-system": "0.1.1",
     "babel-loader": "^9.1.2",
     "chalk": "5.2.0",
