--- a/apps/site/package.json
+++ b/apps/site/package.json
@@ -22,8 +22,8 @@
     "@aws-sdk/client-s3": "3.169.0",
     "@aws-sdk/client-ses": "3.169.0",
     "@blockprotocol/core": "0.1.2",
-    "@blockprotocol/graph": "0.3.1-canary-20230803163819",
-    "@blockprotocol/hook": "0.1.5-canary-20230803163819",
+    "@blockprotocol/graph": "0.3.0",
+    "@blockprotocol/hook": "0.1.4",
     "@blockprotocol/service": "0.1.3",
     "@blockprotocol/type-system": "0.1.1",
     "@cloudflare/stream-react": "^1.8.0",
@@ -75,7 +75,7 @@
     "material-ui-popup-state": "^5.0.4",
     "md5": "^2.3.0",
     "mime-types": "^2.1.35",
-    "mock-block-dock": "0.1.7-canary-20230803163819",
+    "mock-block-dock": "0.1.6",
     "mongodb": "^4.2.2",
     "next": "13.1.6",
     "next-connect": "^0.12.1",
