Add additional denied licenses

--- a/.github/dependency-review-config.yml
+++ b/.github/dependency-review-config.yml
@@ -28,4 +28,10 @@ deny-licenses:
   - 'CC-BY-NC-SA-3.0-DE'
   - 'CC-BY-NC-SA-3.0-IGO'
   - 'CC-BY-NC-SA-4.0'
+  - 'NCGL-UK-2.0'
+  - 'NPOSL-3.0'
+  - 'PolyForm-Noncommercial-1.0.0'
+  - 'PolyForm-Small-Business-1.0.0'
+  - 'RPL-1.1'
+  - 'RPL-1.5'
 allow-dependencies-licenses: 'pkg:npm/%40blockprotocol, pkg:npm/%40hashintel, pkg:cargo/antsi, pkg:cargo/deer, pkg:cargo/deer-json, pkg:cargo/deer-macros, pkg:cargo/error-stack, pkg:cargo/error-stack-macros, pkg:cargo/sarif, pkg:cargo/whassup'
