`yarn fix:prettier`

--- a/.github/dependency-review-config.yml
+++ b/.github/dependency-review-config.yml
@@ -1,37 +1,37 @@
-fail-on-severity: 'critical'
+fail-on-severity: "critical"
 deny-licenses:
-  - 'AGPL-1.0-only'
-  - 'AGPL-1.0-or-later'
-  - 'AGPL-3.0-only'
-  - 'AGPL-3.0-or-later'
-  - 'BUSL-1.1'
-  - 'CC-BY-NC-1.0'
-  - 'CC-BY-NC-2.0'
-  - 'CC-BY-NC-2.5'
-  - 'CC-BY-NC-3.0'
-  - 'CC-BY-NC-3.0-DE'
-  - 'CC-BY-NC-4.0'
-  - 'CC-BY-NC-ND-1.0'
-  - 'CC-BY-NC-ND-2.0'
-  - 'CC-BY-NC-ND-2.5'
-  - 'CC-BY-NC-ND-3.0'
-  - 'CC-BY-NC-ND-3.0-DE'
-  - 'CC-BY-NC-ND-3.0-IGO'
-  - 'CC-BY-NC-ND-4.0'
-  - 'CC-BY-NC-SA-1.0'
-  - 'CC-BY-NC-SA-2.0'
-  - 'CC-BY-NC-SA-2.0-DE'
-  - 'CC-BY-NC-SA-2.0-FR'
-  - 'CC-BY-NC-SA-2.0-UK'
-  - 'CC-BY-NC-SA-2.5'
-  - 'CC-BY-NC-SA-3.0'
-  - 'CC-BY-NC-SA-3.0-DE'
-  - 'CC-BY-NC-SA-3.0-IGO'
-  - 'CC-BY-NC-SA-4.0'
-  - 'NCGL-UK-2.0'
-  - 'NPOSL-3.0'
-  - 'PolyForm-Noncommercial-1.0.0'
-  - 'PolyForm-Small-Business-1.0.0'
-  - 'RPL-1.1'
-  - 'RPL-1.5'
-allow-dependencies-licenses: 'pkg:npm/%40blockprotocol, pkg:npm/%40hashintel, pkg:cargo/antsi, pkg:cargo/deer, pkg:cargo/deer-json, pkg:cargo/deer-macros, pkg:cargo/error-stack, pkg:cargo/error-stack-macros, pkg:cargo/sarif, pkg:cargo/whassup'
+  - "AGPL-1.0-only"
+  - "AGPL-1.0-or-later"
+  - "AGPL-3.0-only"
+  - "AGPL-3.0-or-later"
+  - "BUSL-1.1"
+  - "CC-BY-NC-1.0"
+  - "CC-BY-NC-2.0"
+  - "CC-BY-NC-2.5"
+  - "CC-BY-NC-3.0"
+  - "CC-BY-NC-3.0-DE"
+  - "CC-BY-NC-4.0"
+  - "CC-BY-NC-ND-1.0"
+  - "CC-BY-NC-ND-2.0"
+  - "CC-BY-NC-ND-2.5"
+  - "CC-BY-NC-ND-3.0"
+  - "CC-BY-NC-ND-3.0-DE"
+  - "CC-BY-NC-ND-3.0-IGO"
+  - "CC-BY-NC-ND-4.0"
+  - "CC-BY-NC-SA-1.0"
+  - "CC-BY-NC-SA-2.0"
+  - "CC-BY-NC-SA-2.0-DE"
+  - "CC-BY-NC-SA-2.0-FR"
+  - "CC-BY-NC-SA-2.0-UK"
+  - "CC-BY-NC-SA-2.5"
+  - "CC-BY-NC-SA-3.0"
+  - "CC-BY-NC-SA-3.0-DE"
+  - "CC-BY-NC-SA-3.0-IGO"
+  - "CC-BY-NC-SA-4.0"
+  - "NCGL-UK-2.0"
+  - "NPOSL-3.0"
+  - "PolyForm-Noncommercial-1.0.0"
+  - "PolyForm-Small-Business-1.0.0"
+  - "RPL-1.1"
+  - "RPL-1.5"
+allow-dependencies-licenses: "pkg:npm/%40blockprotocol, pkg:npm/%40hashintel, pkg:cargo/antsi, pkg:cargo/deer, pkg:cargo/deer-json, pkg:cargo/deer-macros, pkg:cargo/error-stack, pkg:cargo/error-stack-macros, pkg:cargo/sarif, pkg:cargo/whassup"
