--- a/libs/@blockprotocol/type-system/crate/rust-toolchain.toml
+++ b/libs/@blockprotocol/type-system/crate/rust-toolchain.toml
@@ -1,3 +1,4 @@
 [toolchain]
-channel = "nightly-2022-10-28"
+# Update the Vercel script as well if you change this
+channel = "nightly-2023-10-08"
 components = ["rust-src"]
