--- a/libs/@blockprotocol/graph/package.json
+++ b/libs/@blockprotocol/graph/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@blockprotocol/graph",
-  "version": "0.3.1-canary-20231120181031",
+  "version": "0.3.0",
   "description": "Implementation of the Block Protocol Graph service specification for blocks and embedding applications",
   "keywords": [
     "blockprotocol",
