--- a/blocks/feature-showcase/package.json
+++ b/blocks/feature-showcase/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@blocks/feature-showcase",
-  "version": "0.0.3-canary-20240108132503",
+  "version": "0.0.2",
   "private": true,
   "description": "This is a feature showcase block for the Block Protocol.",
   "keywords": [
@@ -33,7 +33,7 @@
     "trailingComma": "all"
   },
   "dependencies": {
-    "@blockprotocol/graph": "0.3.1-canary-20240108132503",
+    "@blockprotocol/graph": "0.3.0",
     "@blockprotocol/type-system": "0.1.1",
     "chalk": "5.2.0",
     "fs-extra": "^10.1.0"
@@ -42,9 +42,9 @@
     "@local/eslint-config": "0.0.0-private",
     "@local/tsconfig": "0.0.0-private",
     "@types/react-dom": "18.0.9",
-    "block-scripts": "0.3.2-canary-20240108132503",
+    "block-scripts": "0.3.1",
     "eslint": "8.33.0",
-    "mock-block-dock": "0.1.7-canary-20240108132503",
+    "mock-block-dock": "0.1.6",
     "prettier": "2.8.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
