temporarily convert changesets to canary releases

--- a/libs/@blockprotocol/graph/package.json
+++ b/libs/@blockprotocol/graph/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@blockprotocol/graph",
-  "version": "0.3.3",
+  "version": "0.3.4-canary-20240312191227",
   "description": "Implementation of the Block Protocol Graph service specification for blocks and embedding applications",
   "keywords": [
     "blockprotocol",
@@ -130,7 +130,7 @@
     "lint:tsc": "tsc --noEmit"
   },
   "dependencies": {
-    "@blockprotocol/core": "0.1.2",
+    "@blockprotocol/core": "0.1.3-canary-20240312191227",
     "@blockprotocol/type-system": "0.1.1",
     "ajv": "^8.11.2",
     "ajv-formats": "^2.1.1",
